--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -84,3 +84,59 @@
     &:hover
         background: #ffc451
         color: #fff
+
+#heroCarousel
+  .carousel-item
+    height: 100vh
+    position: relative
+    background-size: cover
+    background-position: center
+    background-repeat: no-repeat
+
+    &.firstSlide
+      background-image: url("../img/hero-carousel/hero-carousel-1.jpg")
+    &.secondSlide
+      background-image: url("../img/hero-carousel/hero-carousel-2.jpg")
+    &.thirdSlide
+      background-image: url("../img/hero-carousel/hero-carousel-3.jpg")
+
+    .darkOverlay
+      position: absolute
+      inset: 0
+      background: rgba(0, 0, 0, .45)
+
+    .heroContent
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%)
+      text-align: center
+      color: #fff
+      z-index: 5
+
+      h2
+        font-size: 3rem
+        font-weight: 700
+        margin-bottom: 1rem
+
+      p
+        max-width: 700px
+        margin: 0 auto 2rem
+        font-size: 1.2rem
+
+    .ctaButtons
+      display: flex
+      gap: 1rem
+      justify-content: center
+
+      a
+        border: 2px solid #ffc451
+        padding: 10px 25px
+        border-radius: 30px
+        color: white
+        text-decoration: none
+        transition: 0.3s
+
+        &:hover
+          background: #ffc451
+          color: black
