--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -1,33 +1,33 @@
 *
-  margin: 0
-  padding: 0
+    margin: 0
+    padding: 0
 
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap')
 
 // Main header
 #mainHeader
-  position: fixed
-  top: 0
-  left: 0
-  bottom: auto
-  width: 100%
-  z-index: 10
-  padding: 15px 0
-  background: rgba(0, 0, 0, 0.336)
+    position: fixed
+    top: 0
+    left: 0
+    bottom: auto
+    width: 100%
+    z-index: 10
+    padding: 15px 0
+    background: rgba(0, 0, 0, 0.336)
 
-  .topBar
+.topBar
     height: 20px
     font-size: 14px
     color: #fff
     margin-bottom: 10px
     i
-      color: #ffb03b
-      span
+        color: #ffb03b
+    span
         color: #fff
         padding-left: 5px
         font-family: Arial, Helvetica, sans-serif
 
-  .Logo
+.Logo
     font-family: 'Satisfy', sans-serif
     font-size: 28px
     margin: 0
@@ -36,37 +36,37 @@
     font-weight: 600
     letter-spacing: 1px
     a
-      color: #fff
-      text-decoration: none
+        color: #fff
+        text-decoration: none
 .navigation
     ul
-      margin: 0
-      padding: 0
-      display: flex
-      list-style: none
-      align-items: center
-      li
+        margin: 0
+        padding: 0
+        display: flex
+        list-style: none
+        align-items: center
+    li
         position: relative
         white-space: nowrap
         padding: 10px 0 10px 24px
         a
-          display: flex
-          align-items: center
-          justify-content: space-between
-          padding: 0 3px
-          font-family: "Poppins", sans-serif
-          font-size: 15px
-          font-weight: 600
-          color: rgba(255, 255, 255, 0.7)
-          white-space: nowrap
-          transition: 0.3s
-          position: relative
-          text-decoration: none
-          &:hover, &.active
+            display: flex
+            align-items: center
+            justify-content: space-between
+            padding: 0 3px
+            font-family: "Poppins", sans-serif
+            font-size: 15px
+            font-weight: 600
+            color: rgba(255, 255, 255, 0.7)
+            white-space: nowrap
+            transition: 0.3s
+            position: relative
+            text-decoration: none
+        &:hover, &.active
             color: #ffb03b
 
     .mobilecheck
-      display: none 
+        display: none
 
 .bookTableBtn
     margin: 0 0 0 15px
@@ -86,7 +86,7 @@
         color: #fff
 
 #heroCarousel
-  .carousel-item
+.carousel-item
     height: 100vh
     position: relative
     background-size: cover
@@ -94,42 +94,42 @@
     background-repeat: no-repeat
 
     &.firstSlide
-      background-image: url("../img/hero-carousel/hero-carousel-1.jpg")
+        background-image: url("../img/hero-carousel/hero-carousel-1.jpg")
     &.secondSlide
-      background-image: url("../img/hero-carousel/hero-carousel-2.jpg")
+        background-image: url("../img/hero-carousel/hero-carousel-2.jpg")
     &.thirdSlide
-      background-image: url("../img/hero-carousel/hero-carousel-3.jpg")
+        background-image: url("../img/hero-carousel/hero-carousel-3.jpg")
 
     .darkOverlay
-      position: absolute
-      inset: 0
-      background: rgba(0, 0, 0, .45)
+        position: absolute
+        inset: 0
+        background: rgba(0, 0, 0, .45)
 
     .heroContent
-      position: absolute
-      top: 50%
-      left: 50%
-      transform: translate(-50%, -50%)
-      text-align: center
-      color: #fff
-      z-index: 5
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        text-align: center
+        color: #fff
+        z-index: 5
 
-      h2
+    h2
         font-size: 3rem
         font-weight: 700
         margin-bottom: 1rem
 
-      p
+    p
         max-width: 700px
         margin: 0 auto 2rem
         font-size: 1.2rem
 
     .ctaButtons
-      display: flex
-      gap: 1rem
-      justify-content: center
+        display: flex
+        gap: 1rem
+        justify-content: center
 
-      a
+    a
         border: 2px solid #ffc451
         padding: 10px 25px
         border-radius: 30px
@@ -138,5 +138,26 @@
         transition: 0.3s
 
         &:hover
-          background: #ffc451
-          color: black
+            background: #ffc451
+            color: black
+
+.aboutSection
+    background-color: rgb(255, 250, 243)
+    display: flex
+    flex-direction: row
+    padding-top: 5vw
+    gap: 2vw
+    height: 60vh
+    padding-inline: 15vw
+div
+    ul
+        padding: 0
+        list-style: none
+    li
+        padding-bottom: 10px
+        i
+            font-size: 1.2vw
+img
+    width: 30vw
+    height: 40vh
+
