--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -149,15 +149,24 @@
     gap: 2vw
     height: 60vh
     padding-inline: 15vw
-div
-    ul
-        padding: 0
-        list-style: none
-    li
-        padding-bottom: 10px
-        i
-            font-size: 1.2vw
-img
-    width: 30vw
-    height: 40vh
+    div
+        ul
+            padding: 0
+            list-style: none
+        li
+            i
+                font-size: 1.2vw
+        img
+            width: 30vw
+            height: 40vh
+    .aboutTitle
+        div
+            h2
+                font-size: 1.5vw
+                font-weight: 700
+                opacity: .8
+                font-family: 'Satisfy', sans-serif
+            p
+                font-style: italic
+                opacity: .8
 
