feat: Implement 'Why Us' section and introduce Sass-based styling with new CSS and SASS files.

--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -170,3 +170,40 @@
                 font-style: italic
                 opacity: .8
 
+.whysection
+    padding-top: 5vw
+    padding-bottom: 5vw
+    .whyTitle
+        display: flex
+        flex-direction: column
+        align-items: center
+        .whytitle
+            background-color: rgb(255, 247, 235)
+            padding: .8vw
+            font-size: .7vw
+            font-weight: 700
+            border-radius: 25px
+        .whypara
+            font-size: 1.7vw
+            font-weight: 700
+            font-family: 'Satisfy', sans-serif
+    .cubescontainer
+        display: flex
+        flex-direction: row
+        align-items: center
+        justify-content: center
+        gap: 2vw
+        padding-inline: 6vw
+        .cubes
+            background-color: rgb(249, 249, 249)
+            padding: 4vw
+            .cubetitle
+                font-size: 1.2vw
+                font-family: 'Satisfy', sans-serif
+                font-weight: 700
+                opacity: .8
+            p
+                font-size: .9vw
+                opacity: .7
+
+
