--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29993,4 +29993,48 @@ textarea.form-control-lg {
   opacity: 0.8;
 }
 
+.whysection {
+  padding-top: 5vw;
+  padding-bottom: 5vw;
+}
+.whysection .whyTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.whysection .whyTitle .whytitle {
+  background-color: rgb(255, 247, 235);
+  padding: 0.8vw;
+  font-size: 0.7vw;
+  font-weight: 700;
+  border-radius: 25px;
+}
+.whysection .whyTitle .whypara {
+  font-size: 1.7vw;
+  font-weight: 700;
+  font-family: "Satisfy", sans-serif;
+}
+.whysection .cubescontainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2vw;
+  padding-inline: 6vw;
+}
+.whysection .cubescontainer .cubes {
+  background-color: rgb(249, 249, 249);
+  padding: 4vw;
+}
+.whysection .cubescontainer .cubes .cubetitle {
+  font-size: 1.2vw;
+  font-family: "Satisfy", sans-serif;
+  font-weight: 700;
+  opacity: 0.8;
+}
+.whysection .cubescontainer .cubes p {
+  font-size: 0.9vw;
+  opacity: 0.7;
+}
+
 /*# sourceMappingURL=app.css.map */
