--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30037,4 +30037,41 @@ textarea.form-control-lg {
   opacity: 0.7;
 }
 
+.specials {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 5vw;
+  padding-inline: 6vw;
+}
+.specials .specialstext {
+  width: 25vw;
+}
+.specials .specialstext p {
+  font-weight: bolder;
+  font-size: 0.7vw;
+  cursor: pointer;
+  padding-block: 0.3vw;
+}
+.specials .specialstext p:hover {
+  color: #ffc451;
+}
+.specials .specialssectext {
+  padding-inline: 10vw;
+}
+.specials .specialssectext h2, .specials .specialssectext .h2 {
+  display: flex;
+  align-items: center;
+  font-family: "Satisfy", sans-serif;
+  font-weight: 700;
+  font-size: 1.7vw;
+  opacity: 0.8;
+  padding-bottom: 1vw;
+}
+.specials .specialsimg img {
+  width: 20vw;
+  height: 40vh;
+}
+
 /*# sourceMappingURL=app.css.map */
