--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -206,4 +206,34 @@
                 font-size: .9vw
                 opacity: .7
 
+.specials
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: center
+    gap: 5vw
+    padding-inline: 6vw
+    .specialstext
+        width: 25vw
+        p
+            font-weight: bolder
+            font-size: .7vw
+            cursor: pointer
+            padding-block: .3vw
+            &:hover
+                color: #ffc451
+    .specialssectext
+        padding-inline: 10vw
+        h2
+            display: flex
+            align-items: center
+            font-family: 'Satisfy', sans-serif
+            font-weight: 700
+            font-size: 1.7vw
+            opacity: .8
+            padding-bottom: 1vw
+    .specialsimg
+        img
+            width: 20vw
+            height: 40vh
 
