feat: add gallery section, refine booking form, and introduce SASS for styling.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30133,4 +30133,9 @@ textarea.form-control-lg {
   background-color: #ffc451;
 }
 
+.gallery img {
+  width: 24.9vw;
+  height: 34vh;
+}
+
 /*# sourceMappingURL=app.css.map */
