--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -286,3 +286,11 @@
         border-radius: 5px
         &:hover
             background-color: #ffc451
+
+.gallery
+    img
+        width: 24.9vw
+        height: 34vh
+
+
+
