--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -197,6 +197,11 @@
         .cubes
             background-color: rgb(249, 249, 249)
             padding: 4vw
+            .numb
+                color: #ffc451
+            &:hover
+                color: white
+                background-color: $orange
             .cubetitle
                 font-size: 1.2vw
                 font-family: 'Satisfy', sans-serif
@@ -292,5 +297,16 @@
         width: 24.9vw
         height: 34vh
 
+.caro
+    padding-inline: 7vw
 
+.caro-bg
+    background-image: url("../img/events-bg.jpg")
+    height: 100vh
+    filter: brightness(50%)
+
+.carousel-img
+    filter: brightness(100%) !important
+    img
+        width: 90%
 
