--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -297,5 +297,9 @@
         width: 24.9vw
         height: 34vh
 
-
+.map
+    iframe
+        padding-top: 5vw
+        width: 100%
+        height: 60vh
 
