--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30151,4 +30151,25 @@ textarea.form-control-lg {
   height: 60vh;
 }
 
+.contact {
+  display: flex;
+  flex-direction: row;
+}
+.contact .contactcontent {
+  width: 25vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.contact .contactcontent h2, .contact .contactcontent .h2 {
+  font-family: "Satisfy", sans-serif;
+}
+.contact .contactcontent p {
+  opacity: 0.8;
+}
+.contact .contactinfo {
+  background-color: red;
+}
+
 /*# sourceMappingURL=app.css.map */
