--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -303,3 +303,19 @@
         width: 100%
         height: 60vh
 
+.contact
+    display: flex
+    flex-direction: row
+    .contactcontent
+        width: 25vw
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        h2
+            font-family: 'Satisfy', sans-serif
+        p
+            opacity: .8
+    .contactinfo
+        background-color: red
+
