--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -303,19 +303,65 @@
         width: 100%
         height: 60vh
 
-.contact
+.contactTitle
+    padding-top: 5vw
+    padding-bottom: 5vw
     display: flex
-    flex-direction: row
-    .contactcontent
-        width: 25vw
+    gap: 2vw
+    .contacttitle
         display: flex
         flex-direction: column
-        align-items: center
-        justify-content: center
+        padding: .8vw
+        flex: 1
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
         h2
             font-family: 'Satisfy', sans-serif
         p
+            font-size: .8vw
             opacity: .8
-    .contactinfo
-        background-color: red
+    .contactpara
+        margin-top: 2vw
+        font-size: 1vw
+        font-weight: 700
+        .contact
+            display: flex
+            flex-direction: row
+            margin-bottom: 1.5vw
+            i
+                font-size: 1.3vw
+                color: #ffc451
+                padding-right: .5vw
+            .infos
+                font-family: 'Satisfy', sans-serif
+                font-size: 1.2vw
+            .infos-text
+                font-size: .8vw
+                opacity: .8
 
+    .contactform
+        display: flex
+        flex-direction: column
+        flex: 1.5
+        form
+            display: flex
+            flex-direction: column
+            gap: 1vw
+            .form-row
+                display: flex
+                gap: 1vw
+                .form-group
+                    flex: 1
+            .form-group
+                width: 100%
+                input, textarea
+                    width: 100%
+                    padding: 0.8vw
+                textarea
+                    min-height: 10vw
+                    resize: vertical
+            button
+                background-color: #ffc451
+                border: none
+                padding: 0.8vw 2vw
+                align-self: center
+                cursor: pointer
