--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -365,3 +365,32 @@
                 padding: 0.8vw 2vw
                 align-self: center
                 cursor: pointer
+.testimonial
+    padding-top: 5vw
+    padding-bottom: 5vw
+    background-image: url("../img/testimonials-bg.jpg")
+    background-size: cover
+    background-position: center
+    height: 80vh
+    .testimonials-img
+        display: flex
+        flex-direction: column 
+        img
+            width: 10vw
+            height: 20vh
+            border: 10px solid #00000016
+            border-radius: 50%
+    .testimonials-text
+        h5
+            font-family: 'Satisfy', sans-serif 
+            padding: 0
+    .testopara
+        font-family: 'Satisfy', sans-serif
+        opacity: .8
+        font-size: .8vw
+        padding: 0
+.button-circle
+    button
+        border-radius: 50%
+        width: 12px !important
+        height: 12px !important
