feat: Add comprehensive styling for various sections and implement an events carousel, removing the previous menu placeholder.

--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -394,3 +394,7 @@
         border-radius: 50%
         width: 12px !important
         height: 12px !important
+
+.events
+    background-image: url("../img/events-bg.jpg")
+    
