--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30265,4 +30265,8 @@ textarea.form-control-lg {
   height: 12px !important;
 }
 
+.events {
+  background-image: url("../img/events-bg.jpg");
+}
+
 /*# sourceMappingURL=app.css.map */
