--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30267,6 +30267,50 @@ textarea.form-control-lg {
 
 .events {
   background-image: url("../img/events-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+.events::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.events .eventstext {
+  display: flex;
+  flex-direction: column;
+  gap: 1vw;
+}
+.events .eventstext h5, .events .eventstext .h5 {
+  font-family: "Satisfy", sans-serif;
+  padding: 0;
+  font-size: 1.7vw;
+  display: flex;
+  justify-content: start;
+}
+.events .eventstext p {
+  margin: 0;
+  padding: 0;
+}
+.events .eventstext ul {
+  margin: 0;
+  padding: 0;
+}
+.events .eventstext ul li {
+  list-style-type: none;
+}
+.events .eventstext .eventspara {
+  display: flex;
+  text-align: start;
+}
+.events .price {
+  display: flex !important;
+  justify-content: start !important;
+  font-size: 1.7vw;
+  border-bottom: 1px solid #ffc451;
+  width: fit-content;
 }
 
 /*# sourceMappingURL=app.css.map */
