feat: Implement SASS styling for the home header and generate compiled CSS.

--- a/src/sass/modules/home/_header.sass
+++ b/src/sass/modules/home/_header.sass
@@ -544,3 +544,101 @@
 #filter-specialty:checked ~ .menu-column-right > .menu-item[data-category="starters"],
 #filter-specialty:checked ~ .menu-column-right > .menu-item[data-category="salads"]
     display: none
+
+
+
+.site-footer
+  background: #1a1814
+  color: #fff
+  font-size: 14px
+  padding: 40px 0 0
+  font-family: "Poppins", sans-serif
+
+.footer-content
+  padding: 40px 0
+
+.info-grid
+  display: flex
+  justify-content: center
+
+.location-block,
+.contact-block,
+.hours-block,
+.social-block
+  padding: 0 15px
+  margin-bottom: 30px
+
+.site-footer h4
+  font-size: 20px
+  font-weight: 600
+  color: #fff
+  margin-bottom: 20px
+  font-family: "Satisfy", cursive
+
+.site-footer p
+  color: #fff
+  margin-bottom: 10px
+  line-height: 1.6
+
+.site-footer strong
+  font-weight: 600
+
+.site-footer i
+  color: #ffb03b
+  margin-right: 10px
+
+.social-icons
+  display: flex
+  gap: 10px
+
+.social-icons a
+  display: flex !important
+  align-items: center !important
+  justify-content: center !important
+  width: 40px
+  height: 40px
+  border: 1px solid #b9b9b9
+  border-radius: 50%
+  font-size: 18px
+  color: #fff !important
+  text-decoration: none
+  line-height: 1 !important
+  transition: all 0.3s ease
+
+.social-icons a i
+  display: flex !important
+  align-items: center !important
+  justify-content: center !important
+  height: 100%
+  width: 100%
+  line-height: 1 !important
+  font-size: 18px
+  padding-left: 7px
+
+.social-icons a:hover
+  border-color: #ffb03b
+  color: #ffb03b
+
+.site-footer hr
+  border-top: 1px solid #2e2c28
+  margin: 30px 0
+
+.copyright-text,
+.designer-credit
+  text-align: center
+  font-size: 14px
+  color: #bbb
+  margin-bottom: 5px
+
+.copyright-text a,
+.designer-credit a
+  color: #ffb03b
+  text-decoration: none
+  transition: 0.3s
+
+.copyright-text a:hover,
+.designer-credit a:hover
+  color: #fff
+
+.footer-bottom
+  width: 100%
